# deep-learning-server-client

./: README.md  callPythonServer.cpp  config.prototxt  createHDF5Dataset.py  createNoisyDataset.py  runServer_TrainedVSNet_Simple.py  trainAlexNetOnVSDataset.py
binary/: CMakeCache.txt  Makefile  cmake_install.cmake  data.txt  data1.txt  e.txt  error.txt  example-executable  p.txt  v.txt
source/: CMakeLists.txt  example (copy).cpp  example (eric update april3).cpp  example.cpp  lel.cpp
ultimate_code/: predict.py  predict_TEST.py  predict_googlenet_single-output.py  predict_googlenet_single-output_5k.py  predict_new.py  predict_new_alternate-solution.py
